# babel_bootstrap

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
SRC/: QTCLASS.hpp  Second_Windows.hpp  Second_window.cpp  main.cpp
